[metadata]
name = bilean
version = 2015.2
summary = OpenStack Billing Service
description-file =
    README.rst
author = OpenStack
author-email = dongbing.lv@kylin-cloud.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    bilean
scripts =
    bin/bilean-api
    bin/bilean-engine
    bin/bilean-notification
    bin/bilean-manage

[entry_points]
oslo.config.opts =
    bilean.common.config = bilean.common.config:list_opts
    bilean.common.wsgi = bilean.common.wsgi:list_opts
    bilean.api.middleware.ssl = bilean.api.middleware.ssl:list_opts
    bilean.engine.scheduler = bilean.engine.scheduler:list_opts
    bilean.notification.converter = bilean.notification.converter:list_opts

bilean.clients =
    ceilometer = bilean.engine.clients.os.ceilometer:CeilometerClientPlugin
    cinder = bilean.engine.clients.os.cinder:CinderClientPlugin
    glance = bilean.engine.clients.os.glance:GlanceClientPlugin
    keystone = bilean.engine.clients.os.keystone:KeystoneClientPlugin
    nova = bilean.engine.clients.os.nova:NovaClientPlugin
    neutron = bilean.engine.clients.os.neutron:NeutronClientPlugin
    trove = bilean.engine.clients.os.trove:TroveClientPlugin
    sahara = bilean.engine.clients.os.sahara:SaharaClientPlugin

bilean.rules =
    os.nova.server = bilean.rules.os.nova.server:ServerRule

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
