[metadata]
name = bilean
summary = OpenStack Billing Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    bilean

[entry_points]
console_scripts =
    bilean-api = bilean.cmd.api:main
    bilean-engine = bilean.cmd.engine:main
    bilean-scheduler = bilean.cmd.scheduler:main
    bilean-notification = bilean.cmd.notification:main
    bilean-manage = bilean.cmd.manage:main

oslo.config.opts =
    bilean.common.config = bilean.common.config:list_opts
    bilean.common.wsgi = bilean.common.wsgi:list_opts
    bilean.api.middleware.ssl = bilean.api.middleware.ssl:list_opts
    bilean.scheduler.cron_scheduler = bilean.scheduler.cron_scheduler:list_opts
    bilean.notification.converter = bilean.notification.converter:list_opts

bilean.drivers =
    openstack = bilean.drivers.openstack

bilean.plugins =
    os.nova.server = bilean.plugins.os.nova.server:ServerPlugin
    os.cinder.volume = bilean.plugins.os.cinder.volume:VolumePlugin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
